# hso

./: LICENSE  README.md  pyproject.toml
examples/: example_usage.py  sample_prices.csv
hso/: __init__.py  __main__.py  core.py  plots.py  weights.py
